# ControlSystem

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  PLAN.md  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: CONTEXT.md  MILESTONES.md  PLAN.md  PRD.md  REQUIREMENTS.md  STATE.md
.planning/PLAN-V1 (Obsolete)/: PROJECT.md  ROADMAP.md
.planning/PLAN-V2/: 00-context-and-constraints.md  01-architecture-overview.md  02-hardware-topology.md  03-subsystem-boundaries.md  04-control-plane-contracts.md  05-data-plane-and-storage.md  06-timing-and-synchronization.md  07-rearrangement-loop.md  08-calibration-and-provenance.md  09-safety-and-interlocks.md  10-software-stack.md  11-risks-bottlenecks-mitigations.md  12-phased-implementation.md  13-architectural-decisions.md  README.md
.planning/adr/: 0017-lifecycle-disarm-returns-uninit.md
.planning/architecture/: 01-architecture-overview.md  03-subsystem-boundaries.md  04-control-plane-contracts.md  06-timing-and-synchronization.md  07-rearrangement-loop.md  10-software-stack.md  12-phased-implementation.md  13-architectural-decisions.md  README.md
.planning/research-inputs/: PRIMITIVE_PLAN.md
docs/adr/: 0001-execution-authority-and-broker-placement.md  0016-gpu-mutex-locality.md
proto/: lifecycle.proto  run_model.proto  safety.proto  scheduler.proto
schema/: alembic.ini  env.py
schema/versions/: 0001_schema_v1.py
src/broker/: rearrangement_batch.py
src/orchestrator/: admission.py  core.py  db.py  grpc_server.py  heartbeat.py  run_fsm.py
src/proto_gen/: lifecycle_pb2.py  lifecycle_pb2.pyi  (+10 more)
(+30 files in other folders)
