[project]
name = "controlsystem"
version = "0.1.0"
description = "AMO neutral-atom lab control system (PLAN-V2 v1)"
requires-python = ">=3.14,<3.15"
dependencies = [
    "grpcio>=1.62",
    "protobuf>=4.25",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "typer>=0.12",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.62",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "black>=24",
    "mypy>=1.10",
    "types-protobuf",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/orchestrator", "src/compiler", "src/descriptor", "src/calibration",
    "src/broker", "src/device_servers", "src/safety", "src/dashboards",
    "src/proto_gen",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["integration: needs dockerized Postgres"]

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["orchestrator", "compiler", "descriptor", "broker", "device_servers", "safety"]

[[tool.mypy.overrides]]
module = "proto_gen.*"
ignore_errors = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.coverage.run]
source = ["src/orchestrator", "src/compiler", "src/device_servers", "src/broker"]
